--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>ecto</build_depend>
   <build_depend>ecto_ros</build_depend>
+  <build_depend>ecto_pcl</build_depend>
   <build_depend>ecto_image_pipeline</build_depend>
   <build_depend>geometric_shapes</build_depend>
   <build_depend>object_recognition_core</build_depend>
@@ -24,6 +25,7 @@
   <run_depend>boost</run_depend>
   <run_depend>ecto</run_depend>
   <run_depend>ecto_ros</run_depend>
+  <run_depend>ecto_pcl</run_depend>
   <run_depend>ecto_image_pipeline</run_depend>
   <run_depend>geometric_shapes</run_depend>
   <run_depend>object_recognition_core</run_depend>
